# factly

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Makefile  README.md  README.rst  instructions.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  docs.yml
docs/source/: api.rst  conf.py  index.rst  installation.rst  license.rst  maintainers.rst  usage.rst
factly/: __init__.py  __main__.py  benchmarks.py  cli.py  logger.py  models.py  plots.py  resources.py  settings.py  tasks.py
factly/llms/: __init__.py  base_model.py  openai_model.py
tests/: conftest.py  test_cli.py  test_main.py  test_settings.py
