[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "factly"
description = "CLI tool to evaluate ChatGPT factuality on MMLU benchmark."
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.12,<4"
authors = [{ name = "Serghei Iakovlev", email = "oss@serghei.pl" }]
dependencies = [
    "click",
    "datasets>=3.5.1",
    "deepeval>=2.8.0,<3.0.0",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "transformers>=4.51.3",
]
keywords = [
    "llm",
    "factuality",
    "evaluation",
    "benchmark",
    "mmlu",
    "chatgpt",
    "openai",
    "prompt-engineering",
    "ai-evaluation",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",

    "Environment :: Console",

    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",

    "License :: OSI Approved :: MIT License",

    "Operating System :: OS Independent",

    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",

    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/sergeyklay/factly"
Repository = "https://github.com/sergeyklay/factly"
Issues = "https://github.com/sergeyklay/factly/issues"


[project.scripts]
factly = "factly.cli:cli"

[dependency-groups]
dev = ["ruff>=0.11.6"]
testing = []

[tool.uv.sources]
# Mostly due to https://github.com/pallets/click/pull/2365
click = { git = "https://github.com/pallets/click.git", rev = "release-8.2.0" }

[tool.uv]
default-groups = ["dev", "testing"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "I", # All imports
    "E", # All errors
    "W", # All warnings
    "F", # All false positives
    "C", # All complexity
    "Q", # All quality
]

ignore = [
    "E402", # module level import not at top of file
]

[tool.ruff.lint.isort]
known-first-party = ["factly"]
